Fix card overlapping issue on index.html. Max-width set to 100%.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    min-width: 100%;
+    margin: 0px;
 }
 
 p {
@@ -50,8 +51,9 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    position: relative
+    min-width: 100%;
+    position: relative;
+    margin: 0;
 }
 
 h1,
@@ -83,14 +85,16 @@ footer {
     font-size: 30px;
     align-items: end;
     display: flex;
-    width: 100%;
-    position: sticky;
+    min-width: 100%;
     top: 0;
+    margin: 0;
 }
 
 .nav-container {
     padding-right: 0px !important;
     padding-left: 0px !important;
+    margin: 0;
+    width: 100%;
 }
 
 #navbar .logo {
@@ -141,8 +145,10 @@ footer {
     flex-direction: row;
     justify-content: center;
     object-fit: cover;
-    min-height: 100%;
+    max-height: 100%;
     padding: 0 0;
+    max-width: 100%;
+    flex-shrink: 1;
 }
 
 /*carousel*/
@@ -179,11 +185,13 @@ footer {
 #introduction .card {
     margin-bottom: 10px;
     display: inline-block;
+    flex-shrink: 2;
 }
 
 .card-img-top {
-    min-width: 300px;
+    min-width: 100%;
     height: 300px;
+
 }
 
 
@@ -231,6 +239,12 @@ iframe {
     margin-top: 15px;
 }
 
+/*booking page*/
+#booking-form .row {
+    margin: 0;
+    min-width: 100%;
+}
+
 /*Footer/contact*/
 #contact .social-links i {
     color: var(--secondary-color);
@@ -245,6 +259,13 @@ iframe {
 
 /* Media queries */
 
+/*Small devices (phones, 576px and smaller) */
+@media screen and (max-width: 767px) {
+    #introduction .card {
+        flex-direction: column;
+    }
+}
+
 /* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -252,7 +273,12 @@ iframe {
     #introduction .card-body {
         min-height: 191px;
     }
+
+    #introduction .card {
+        flex-direction: row;
+    }
 }
+
 
 /* Large devices (small laptops, 992px and up) */
 @media screen and (min-width: 992px) {
@@ -261,6 +287,7 @@ iframe {
     #introduction .card-body {
         min-height: auto;
     }
+
 }
 
 /* xl devices (large desktops, 1200px and up) */
@@ -270,6 +297,7 @@ iframe {
     #introduction .card-body {
         min-height: 220px;
     }
+
 }
 
 /* xxl devices (larger desktops, 1400px and up) */
@@ -279,4 +307,5 @@ iframe {
     #introduction .card-body {
         min-height: 195px;
     }
+
 }
